--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
+  "devDependencies": {
+    "craco-less": "^2.0.0",
+    "simple-progress-webpack-plugin": "^2.0.0"
+  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
